--- a/package.json
+++ b/package.json
@@ -10,25 +10,26 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
-    "next": "15.1.0",
+    "next": "15.5.3",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "sugar-high": "^0.7.5",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
+    "sugar-high": "^0.9.3",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
-    "@types/node": "^22.10.2",
+    "@tailwindcss/postcss": "^4.1.13",
+    "@types/node": "^24.3.1",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
-    "eslint": "^9.16.0",
-    "eslint-config-next": "15.1.0",
-    "postcss": "^8.4.49",
-    "prettier": "^3.4.2",
-    "prettier-plugin-tailwindcss": "^0.6.9",
-    "tailwindcss": "^3.4.16",
-    "typescript": "^5.7.2"
+    "eslint": "^9.35.0",
+    "eslint-config-next": "15.5.3",
+    "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "tailwindcss": "^4.1.13",
+    "typescript": "^5.9.2"
   },
   "pnpm": {
     "overrides": {
