--- a/package.json
+++ b/package.json
@@ -6,30 +6,32 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint ."
   },
   "dependencies": {
     "clsx": "^2.1.1",
-    "next": "15.5.3",
+    "next": "16.0.1",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
-    "react": "19.1.1",
-    "react-dom": "19.1.1",
-    "sugar-high": "^0.9.3",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "sugar-high": "^0.9.4",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.13",
-    "@types/node": "^24.3.1",
+    "@eslint/eslintrc": "^3.3.1",
+    "@tailwindcss/postcss": "^4.1.16",
+    "@types/node": "^24.9.2",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
-    "eslint": "^9.35.0",
-    "eslint-config-next": "15.5.3",
+    "eslint": "^9.38.0",
+    "eslint-config-next": "16.0.1",
+    "eslint-config-prettier": "^10.1.8",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
-    "prettier-plugin-tailwindcss": "^0.6.14",
-    "tailwindcss": "^4.1.13",
-    "typescript": "^5.9.2"
+    "prettier-plugin-tailwindcss": "^0.7.1",
+    "tailwindcss": "^4.1.16",
+    "typescript": "^5.9.3"
   },
   "pnpm": {
     "overrides": {
